--- a/site.yml
+++ b/site.yml
@@ -93,45 +93,59 @@ site:
 
         data:
             toc:
-                - title: 'The basics (syntax)'
+                - title: 'Syntax'
                   number: 1
                   anchor: 'basics'
                   articles:
-                    - {title: 'Hello world',         href: '/basics/hello/'}
-                    - {title: 'Variables',           href: '/basics/variables/'}
-                    - {title: 'References',          href: '/basics/references/'}
-#                   - {title: 'Context',             href: '/basics/references/'}
-                    - {title: 'Functions',           href: '/basics/functions/'}
-                    - {title: 'Conditionals',        href: '/basics/flow/'}
-                    - {title: 'Loops',               href: '/basics/loops/'}
-                    - {title: 'Exceptions',          href: '/basics/exceptions/'}
-                    - {title: 'Regular expressions', href: '/basics/regexps/'}
-                    - {title: 'Files',               href: '/basics/files/'}
-#                   - {title: 'Modules',             href: '/basics/modules/'}
-#                   - {title: 'Comments and POD',    href: '/basics/pod/'}
-#                   - {title: 'Scope',               href: '/basics/scope/'}
-#                   - {title: 'Constants',           href: '/basics/constants/'}
-                    - {title: 'Perl design goals',   href: '/basics/perl/'}
-#                - title: 'The essentials (built in functions)'
-#                  number: 1
+                    - {number: '1.1',  title: 'Hello world',         href: '/basics/hello/'}
+                    - {number: '1.2',  title: 'Variables',           href: '/basics/variables/'}
+                    - {number: '1.3',  title: 'References',          href: '/basics/references/'}
+#                   - {number: '1.4',  title: 'Context',             href: '/basics/references/'}
+                    - {number: '1.4',  title: 'Functions',           href: '/basics/functions/'}
+                    - {number: '1.5',  title: 'Conditionals',        href: '/basics/flow/'}
+                    - {number: '1.6',  title: 'Loops',               href: '/basics/loops/'}
+                    - {number: '1.7',  title: 'Exceptions',          href: '/basics/exceptions/'}
+                    - {number: '1.8',  title: 'Regular expressions', href: '/basics/regexps/'}
+                    - {number: '1.9',  title: 'Files',               href: '/basics/files/'}
+#                   - {number: '1.11', title: 'Modules',             href: '/basics/modules/'}
+#                   - {number: '1.12', title: 'Comments and POD',    href: '/basics/pod/'}
+#                   - {number: '1.13', title: 'Scope',               href: '/basics/scope/'}
+#                   - {number: '1.14', title: 'Constants',           href: '/basics/constants/'}
+#                   - {number: '1.15', title: 'Perl design goals',   href: '/basics/perl/'}
+#                - title: 'Essential skills'
+#                  number: 2
 #                  anchor: 'builtins'
 #                  articles:
-#                    - {title: 'Exceptions - die/eval',             href: '/builtins/die-eval/'}
-#                    - {title: 'Exceptions - Syntax::Keyword::Try', href: '/builtins/syntax-keyword-try/'}
-#                    - {title: 'File IO - open/close',              href: '/builtins/eval/'}
-#                    - {title: 'File IO - Path::Tiny',              href: '/builtins/path-tiny/'}
-#                    - {title: 'Working with lists',                href: '/builtins/lists/'}
-#                    - {title: 'Working with hashes',               href: '/builtins/hashes/'}
+#                    - title:     'Exceptions'
+#                      toc_title: 'Exceptions with die/eval'
+#                      number:    '2.1'
+#                      title:  'Handling exceptions with die() and eval()'
+#                      href:      '/builtins/die-eval/'
+#                    - title:     'Exceptions'
+#                      toc_title: 'Exceptions with try/catch'
+#                      number:    '2.2'
+#                      title:  'Handling exceptions with Syntax::Keyword::Try'
+#                      href:      '/builtins/syntax-keyword-try/'
+#                    - title:     'File IO with open() and close()'
+#                      toc_title: 'File IO with open/close'
+#                      number:    '2.3'
+#                      href:      '/builtins/open-close/'
+#                    - title:     'File IO with OO'
+#                      toc_title: 'File IO with OO'
+#                      number:    '2.4'
+#                      href:      '/builtins/path-tiny/'
+#                    - {number: '2.5', title: 'Working with lists',  href: '/builtins/lists/'}
+#                    - {number: '2.6', title: 'Working with hashes', href: '/builtins/hashes/'}
                 - title: 'Using libraries'
                   number: 2
                   anchor: 'dependencies'
                   articles:
                   articles:
-                    - {title: 'Loading libraries',             href: '/dependencies/perl5lib/', toc_title: 'Loading libraries ($PERL5LIB)'}
-                    - {title: 'Installing libraries',          href: '/dependencies/cpanm/',    toc_title: 'Installing libraries (cpanm)'}
-                    - {title: 'Choosing libraries',            href: '/dependencies/metacpan/', toc_title: 'Choosing libraries (MetaCPAN)'}
-                    - {title: 'Managing project dependencies', href: '/dependencies/carton/',   toc_title: 'Managing dependencies (Carton)'}
-                    - {title: 'What version? Where?',          href: '/dependencies/pmtools/'}
+                    - {number: '2.1', title: 'Loading libraries and $PERL5LIB',           href: '/dependencies/perl5lib/', toc_title: 'Loading libraries ($PERL5LIB)'}
+                    - {number: '2.2', title: 'Installing libraries with cpanm',           href: '/dependencies/cpanm/',    toc_title: 'Installing libraries (cpanm)'}
+                    - {number: '2.3', title: 'Choosing libraries on MetaCPAN',            href: '/dependencies/metacpan/', toc_title: 'Choosing libraries (MetaCPAN)'}
+                    - {number: '2.4', title: 'Managing project dependencies with Carton', href: '/dependencies/carton/',   toc_title: 'Managing dependencies (Carton)'}
+                    - {number: '2.5', title: 'What version? Where?',                      href: '/dependencies/pmtools/'}
 #                - title: 'Recommended libraries'
 #                  number: 1
 #                  anchor: 'cpan'
@@ -146,27 +160,27 @@ site:
                   number: 3
                   anchor: 'oo'
                   articles:
-                    - {title: 'The story of Perl OO', href: '/oo/story/'}
-                    - {title: 'Classes and objects',  href: '/oo/classes/'}
-                    - {title: 'Attributes',           href: '/oo/attributes/'}
-                    - {title: 'Method modifiers',     href: '/oo/modifiers/'}
-                    - {title: 'Roles',                href: '/oo/roles/'}
-                    - {title: 'Inheritance',          href: '/oo/inheritance/'}
+                    - {number: '3.1', title: 'The story of Perl OO', href: '/oo/story/'}
+                    - {number: '3.2', title: 'Classes and objects',  href: '/oo/classes/'}
+                    - {number: '3.3', title: 'Attributes',           href: '/oo/attributes/'}
+                    - {number: '3.4', title: 'Method modifiers',     href: '/oo/modifiers/'}
+                    - {number: '3.5', title: 'Roles',                href: '/oo/roles/'}
+                    - {number: '3.6', title: 'Inheritance',          href: '/oo/inheritance/'}
                 - title: 'Debugging'
                   number: 4
                   anchor: 'debugging'
                   articles:
-                    - {title: 'Examining data structures', href: '/debugging/data-printer/'}
-                    - {title: 'Forcing stack traces',      href: '/debugging/stack-trace/'}
+                    - {number: '4.1', title: 'Examining data structures', href: '/debugging/data-printer/'}
+                    - {number: '4.2', title: 'Forcing stack traces',      href: '/debugging/stack-trace/'}
                 - title: 'Testing'
                   number: 5
                   anchor: 'testing'
                   articles:
-                    - {title: 'Introduction',                     href: '/testing/intro/'}
-                    - {title: 'Warnings and exceptions',          href: '/testing/warnings/'}
-                    - {title: 'Data structures',                  href: '/testing/data/'}
-                    - {title: 'Mock objects',                     href: '/testing/mock/'}
-                    - {title: 'Building your own test libraries', href: '/testing/libs/'}
+                    - {number: '5.1', title: 'Introduction',                     href: '/testing/intro/'}
+                    - {number: '5.2', title: 'Warnings and exceptions',          href: '/testing/warnings/'}
+                    - {number: '5.3', title: 'Data structures',                  href: '/testing/data/'}
+                    - {number: '5.4', title: 'Mock objects',                     href: '/testing/mock/'}
+                    - {number: '5.5', title: 'Building your own test libraries', href: '/testing/libs/'}
 
         # deploy: This is the deploy object, used to deploy this site.
         deploy:
