File IO with open() and close()

--- a/site.yml
+++ b/site.yml
@@ -126,10 +126,10 @@ site:
                       number:    '2.3'
                       title:     'Handling exceptions with try/catch'
                       href:      '/essentials/try-catch/'
-#                    - title:     'File IO with open() and close()'
-#                      toc_title: 'File IO with open/close'
-#                      number:    '2.4'
-#                      href:      '/essentials/open-close/'
+                    - title:     'File IO with open() and close()'
+                      toc_title: 'File IO with open/close'
+                      number:    '2.4'
+                      href:      '/essentials/fileio-builtins/'
 #                    - title:     'File IO with OO'
 #                      toc_title: 'File IO with OO'
 #                      number:    '2.5'
